--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,9 +1,12 @@
 
 
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
- <%= link_to "Stocking" , root_path, class: "navbar-brand" %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<%= link_to "Stocking", root_path, class:"navbar-brand"%>
+  <button class="navbar-toggler" type="button" 
+  data-toggle="collapse" data-target=
+  "#navbarSupportedContent" aria-controls="
+  navbarSupportedContent" aria-expanded="false" 
+  aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -11,11 +14,10 @@
     <ul class="navbar-nav mr-auto">
       
       <li class="nav-item">
-      <%= link_to "About", home_about_path, class:"nav-link" %>
-        
+      <%= link_to 'About', home_about_path, class: "nav-link" %>
       </li>
-   
-   
+      
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
