--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -17,6 +17,18 @@
       <%= link_to 'About', home_about_path, class: "nav-link" %>
       </li>
       
+      <li class="nav-item">
+      <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+      </li>
+
+      <li class="nav-item">
+      <%= link_to 'Logout', home_about_path, class: "nav-link" %>
+      </li>
+
+      <li class="nav-item">
+      <%= link_to 'Signup', new_user_registration_path, class: "nav-link" %>
+      </li>
+
       
     </ul>
     <form class="form-inline my-2 my-lg-0">
