fixed users error

--- a/app/views/stocks/_form.html.erb
+++ b/app/views/stocks/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.number_field :user_id, id: :stock_user_id,
-    value: current_user.id, type: :hidden %>
+    value: current_user.id %>
   </div>
 
   <div class="actions">
