--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,32 +1,43 @@
 
 
-<h1>Stocks</h1>
-
-<table>
-    <thead>
+<table class= "table table-striped table-bordered table-hover">
+    <thead class= "thead-dark">
         <tr>
-            <th>Ticker</th>
-            <th>User</th>
+            <th>Company</th>
+            <th>
+                Current Price
+            </th>
             <th colspan="3"></th>
         </tr>
     </thead>
-
     <tbody>
         <% @stocks.each do |stock| %>
             <% if stock.user_id == current_user.id %>
-                <tr>
-                    <td><%= stock.ticker %></td>
-                    <td><%= stock.user_id %></td>
-                    <td><%= link_to 'Show', stock %></td>
-                    <td><%= link_to 'Edit', edit_stock_path(stock) %></td>
-                    <td><%= link_to 'Destroy', stock, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                </tr>
+
+                <% @sym= stock.ticker %>
+   
+                <% if @sym == "" %>
+                    <% @nothing = "N/A"%>
+                <% elsif @sym %>
+                    <% @api = StockQuote::Stock.new(api_key:'pk_efbaa5b122c44e1b9bb71680e9d0562b')%>
+                    <% @ticker = StockQuote::Stock.quote("fb") %>
+
+                    <% if !@sym %>
+                        <% @error= "N/A " + exception.message %>
+                    <% end %>
+
+
+                    <tr>
+                        <td><%= @ticker.company_name %></td>
+                        <td><%= @ticker.latest_price %></td>
+                        <td><%= link_to 'Show', stock %></td>
+                        <td><%= link_to 'Edit', edit_stock_path(stock) %></td>
+                        <td><%= link_to 'Destroy', stock, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                    </tr>
+                <% end %>
             <% end %>
         <% end %>
     </tbody>
 </table>
-
-<br>
-
-    <%= link_to 'New Stock', new_stock_path %>
+<br><%= link_to 'New Stock', new_stock_path %>
 
